Add Store team role management
